--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <a href="https://github.com/Faust13" target="_blank" rel="me noopener"><i class="iconfont icon-github"></i></a>
 
 
-<a href="https://linkedin.com/in/dsfsd" target="_blank" rel="me noopener"><i class="iconfont icon-linkedin"></i></a>
+<a href="https://linkedin.com/in/vladislav-bubnov-637a1813a" target="_blank" rel="me noopener"><i class="iconfont icon-linkedin"></i></a>
 
 
 <a href="https://twitter.com/docta_faust" target="_blank" rel="me noopener"><i class="iconfont icon-twitter"></i></a>
